--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "postbuild": "copyfiles -u 1 public/**/* dist/public",
     "start": "node ./dist/index.js",
     "start:dev": "yarn build && node dist/src/index.js",
-    "dev": "nodemon --watch './src/**/*.ts' --ext ts --exec 'yarn start:dev'",
+    "dev": "nodemon --watch './src/**/*.ts' --ext ts --exec yarn start:dev",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
